# Viaduct

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/viaduct/: __init__.py  board.py  cli_ops.py  footprints.py  kicad_cli.py  reports.py  safety.py  schematic.py  server.py  sexpr.py
tests/: test_viaduct.py
tests/test_project/: testboard.kicad_pcb  testboard.kicad_pro  testboard.kicad_sch
