[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "viaduct"
version = "0.1.0"
description = "MCP server that lets Claude do PCB work in KiCad: inspect, place, check, and export boards via kicad-cli and a from-scratch s-expression editor."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jack Rutland" }]
keywords = ["kicad", "pcb", "mcp", "eda", "claude"]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
viaduct = "viaduct.server:main"

[tool.setuptools.packages.find]
where = ["src"]
